--- a/index.html
+++ b/index.html
@@ -5,26 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pohela-Boishakh</title>
     <link rel="stylesheet" href="index.css">
-   
+    <link rel="shortcut icon" href="gallery/Mangal_Shobhajatra_in_Dhaka.jpg" type="Mangal_Shobhajatra">
+    <ul>
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="blog.html" target="_blank">Blog</a></li>
+        <li><a href="photos.html" target="_blank">Photos</a></li>
+        <li><a href="about.html" target="_blank">About</a></li>
+      </ul>
 </head>
 <h1>This is a Pohela Boishakh </h1>
 <body>
-   
     <h2>Pohela Boishakh</h2>
    <p><b>Pohela Boishakh </b>(Bengali: পহেলা বৈশাখ or পয়লা বৈশাখ) (Phonetics: pohela bōiśakh) is the <b>Bengali New Year</b> celebrated by the Bengali people worldwide and as a holiday on 14 April in Bangladesh and 15 April in the Indian[3] states of West Bengal, Tripura, Jharkhand and Assam (Goalpara and Barak Valley). It is a festival based on the spring harvest—which marks the first day of the new year in the Bengali calendar.</p> 
    <p>The Pohela Boishakh has its origins in the Mughal Empire, representing the proclamation of tax collection reforms under Akbar.[8] Its celebration is rooted in the traditions of the Mahifarash community of Old Dhaka. Presently, it is largely a secular holiday for most celebrants and enjoyed by people of several different faiths and backgrounds.</p>
    <p>The festival is celebrated with processions, fairs and family time. The traditional greeting for Bengalis in the new year is <strong>শুভ নববর্ষ </strong>"Shubho Noboborsho" which is literally <strong>"Happy New </strong> Year". The festive Mangal Shobhajatra is organised in Bangladesh. In 2016, the UNESCO declared this festivity organised by the Faculty of Fine Arts, University of Dhaka as a cultural heritage of humanity.[11]</p>
-   <h2>Some scenes from the first day of Baishak</h2>
-   <div><img src="gallery/Colors_of_Celebration!-4.jpeg" alt="Colors of Celebration!">
-    </div>
    
- 
-   <div><img src="gallery/1280px-ঐতিহ্যবাহী_বৈশাখী_মেলার_একটি_স্টল.jpg" alt="মেলার_একটি_স্টল">
-</div>
-   <div><img src="gallery/Bangladeshi_children_with_Pohela_Boishakh_placard_at_Pohela_Boishakh_celebration_(02).jpg" alt="Bengali_New_Year"></div>
-   
-   <div><img src="gallery/1280px-Bengali_New_Year_1422_01.jpg"
-           alt="Bangladeshi children"></div>
    <h2> History and origin</h2>
    <b >Nomenclature</b>
    <p>In Bengali, the word Pohela (or Pahela Bengali: পহেলা), alternatively Poila (Bengali: পয়লা), means 'first' and Boishakh (or Baishak Bengali: বৈশাখ) is the first month of the Bengali calendar (Bengali: পহেলা বৈশাখ Pohela Boishakh, Pahela Boishakh, Pahale Baishak or Bengali: পয়লা বৈশাখ Poila Boishakh).</p>
@@ -34,6 +29,7 @@
 <p>The Bengali calendar in India remains tied to the Hindu calendar system and is used to set the various Bengali Hindu festivals. For Bengalis of West Bengal and other Indian states, the festival falls either on 14 or 15 April every year. The current Bengali calendar in use in the Indian states is based on the Sanskrit text Surya Siddhanta. It retains the historic Sanskrit names of the months, with the first month as Baishakh.</p>
 <h2>Visiting family and friends</h2>
 <p>During Pohela Boishakh, people wear traditional attire, namely women clad in saris and salwar kameez and men dressed in kurta, visit their families and friends and spend time together. Pohela Boishakh is also known for uniting friends and family after a long time. It is a time for unity and reuniting, and spending enjoyable time with friends and family, while putting the past behind.</p>
-   <a href="https://en.wikipedia.org/wiki/Pohela_Boishakh" target="_blank">Read more</a>
+  
+
 </body>
 </html>
